fromenv/tests/ui/02-nested-with-other-attrs.rs
use fromenv::FromEnv;

#[derive(FromEnv)]
pub struct Config {
    #[env(from, nested)]
    database_url: String,
}

fn main() {}
